k8s/credit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit
  namespace: fortune
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit
  template:
    metadata:
      labels:
        app: credit
    spec:
      containers:
        - name: credit
          image: fortune-credit:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: credit
  namespace: fortune
spec:
  selector:
    app: credit
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
