k8s/fortune.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune
  namespace: fortune
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortune
  template:
    metadata:
      labels:
        app: fortune
    spec:
      containers:
        - name: fortune
          image: fortune-fortune:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: fortune
  namespace: fortune
spec:
  selector:
    app: fortune
  ports:
    - port: 8003
      targetPort: 8003
      protocol: TCP
