k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: fortune
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: fortune-payment:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: fortune
spec:
  selector:
    app: payment
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP
